Code improvements and upgraded dependencies version